ref #107: for navigationTree the fix iframe height was too low

--- a/src/CoreBundle/Resources/public/themes/standard/css/global.css
+++ b/src/CoreBundle/Resources/public/themes/standard/css/global.css
@@ -81,7 +81,8 @@ a:hover {
 
 iframe {
     width: 100%;
-    height: 470px;
+    height: 100%;
+    min-height: 470px;
     background-image: none;
     background-color: #ffffff;
     border: none;
